--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Our Love Story</title>
+	<title> Love Log</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<style type="text/css">
@@ -17,70 +17,71 @@
 </head>
 
 <body>
+<audio src="./music.mp3" autoplay="true" loop="loop"></audio>
 <div id="mainDiv">
 	<div id="content">
 		<div id="code">
 			<span class="comments">##</span><br/>
-			<span class="comments"># I am a programmer</span><br/>
+			<span class="comments"># I used to be a programmer</span><br/>
 			<span class="comments"># so I write code to celebrate Valentine's Day in coder's way.</span><br/>
 			<span class="comments">##</span><br/>
-			i = Boy(<span class="string">"Qingcai Cui"</span>);<br/>
-			u = Girl(<span class="string">"Qian Ma"</span>);<br/>
-			<span class="comments"># Oct 14, 2018, I meet you because of PyCon 2018. </span><br/>
-			i.meet(u)<br/>
-			<span class="comments"># Afterwards, I confessed to you. </span><br/>
+			i = Boy(<span class="string">"Yan Su"</span>);<br/>
+			u = Girl(<span class="string">"Ke Ai"</span>);<br/>
+			<span class="comments"># Nov 30, 2019, We made a 1.5-hours phone call after you drunk. You were happy and I fall in love. </span><br/>
+			u.call(i)<br/>
+			<span class="comments"># Dec 7, 2019, I met you in person, that's the time I know you are the right one. </span><br/>
 			i.confess(u)<br/>
-			<span class="comments"># Nov 5, 2018, You became my girlfriend.</span><br/>
+			<span class="comments"># Dec 8, 2019, You are my girl.</span><br/>
 			u.accepted(i)<br/>
 			<span class="comments"># Since then, we spent harmony happiness life every day.</span><br/>
 			happy(u, i)<br/>
-			<span class="comments"># We enjoy studying together.</span><br/>
-			study(u, i)<br/>
+			<span class="comments"># We enjoy watching movie together.</span><br/>
+			watch_movie(u, i)<br/>
 			<span class="comments"># We enjoy cuisine together.</span><br/>
 			dine(u, i)<br/>
-			<span class="comments"># We enjoy appointment together.</span><br/>
-			appoint(u, i)<br/>
-			<span class="comments"># We enjoy vacation together.</span><br/>
-			vacation(u, i)<br/>
+			<span class="comments"># We enjoy sleep together.</span><br/>
+			sleep(u, i)<br/>
+			<span class="comments"># We will enjoy reading books together.</span><br/>
+			read_book(u, i)<br/>
 			<span class="comments"># Sometimes there are a few conflicts between us.</span><br/>
 			conflict(u, i, sometimes=<span class="keyword">True</span>)<br/>
-			<span class="comments"># But we are getting more and more in harmony together.</span><br/>
-			u.in_harmony_with(i) <br/>
-			i.in_harmony_with(u) <br/>
-			<span class="comments"># You are the greatest love of my life.</span><br/>
+			<span class="comments"># But we feel  more and more love together.</span><br/>
+			u.in_love_with(i) <br/>
+			i.in_love_with(u) <br/>
+			<span class="comments"># You are the love of my life.</span><br/>
 			while <span class="keyword">True</span>:<br/>
 			<span class="placeholder"></span><span class="keyword">if</span> u.with(i):<br/>
 			<span class="placeholder"></span><span class="placeholder"></span>u = everything<br/>
 			<span class="placeholder"></span><span class="keyword">else</span>:<br/>
 			<span class="placeholder"></span><span class="placeholder"></span>everything = u<br/>
-			<span class="comments"># Waiting me marries you, we will be the happiest couple in the world</span><br/>
-			i.marry(u, in_the_future=<span class="keyword">True</span>)<br/>
-			i.live_happily_forever_with(u)<br/>
-			<span class="comments"># I love you forever.</span><br/>
+			<span class="comments"># Waiting more great things happen to us </span><br/>
+			i.love(u, 100%=<span class="keyword">True</span>)<br/>
+			i.live_happily_with(u)<br/>
+			<span class="comments"># I love you.</span><br/>
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					Qian, I have fallen in love with you for
+					Ke Ai, I have fallen in love with you for
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
 					Love u forever and ever.<br/>
-					<div class="signature">- Qingcai Cui | Germey</div>
+					<div class="signature">- Yan Su</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div id="copyright">
-		Copyright © 2020 <a href='http://cuiqingcai.com'>cuiqingcai.com</a> 2014-2020
+		Copyright © 2020 <a href='http://chenpinyuan.com'>chenpinyuan.com</a> 2019-2020
 	</div>
 </div>
 <script type="text/javascript">
 	var offsetX = $("#loveHeart").width() / 2;
 	var offsetY = $("#loveHeart").height() / 2 - 55;
 	var together = new Date();
-	together.setFullYear(2018, 10, 5);
+	together.setFullYear(2019, 11, 30);
 	together.setHours(15);
 	together.setMinutes(0);
 	together.setSeconds(0);
